Work in progress on C++ interface for libmimetic.

--- a/configure.ac
+++ b/configure.ac
@@ -29,6 +29,7 @@ AC_CONFIG_FILES([
   dune/porsol/common/test/Makefile
   dune/porsol/euler/Makefile
   dune/porsol/euler/test/Makefile
+  dune/porsol/libmimetic/Makefile
   dune/porsol/mimetic/Makefile
   dune/porsol/mimetic/test/Makefile
   examples/Makefile
