--- a/dune/porsol/Makefile.am
+++ b/dune/porsol/Makefile.am
@@ -1,5 +1,5 @@
 porsolincludedir = $(includedir)/dune/porsol
 
-SUBDIRS = common euler mimetic
+SUBDIRS = common euler libmimetic mimetic
 
 include $(top_srcdir)/am/global-rules
