Changed libmimetic to opmpressure, and get subrepo by hg.

--- a/dune/porsol/Makefile.am
+++ b/dune/porsol/Makefile.am
@@ -1,5 +1,5 @@
 porsolincludedir = $(includedir)/dune/porsol
 
-SUBDIRS = common euler libmimetic mimetic
+SUBDIRS = opmpressure common euler mimetic
 
 include $(top_srcdir)/am/global-rules
