Moved programs to examples and added AbstractLinearSolver class.

--- a/dune/porsol/common/Makefile.am
+++ b/dune/porsol/common/Makefile.am
@@ -11,4 +11,13 @@ common_HEADERS = blas_lapack.hpp BoundaryConditions.hpp fortran.hpp \
                  setupGridAndProps.hpp SimulatorBase.hpp SimulatorTester.hpp \
 		 SimulatorUtilities.hpp SintefLegacyGridInterface.hpp
 
+noinst_LTLIBRARIES = libduneporsolcommon.la
+
+libduneporsolcommon_la_SOURCES = \
+	LinearSolverISTL.cpp
+
+
+libduneporsolcommon_la_CPPFLAGS = $(DUNE_CPPFLAGS) $(BOOST_CPPFLAGS)
+libduneporsolcommon_la_LDFLAGS  = $(DUNE_LDFLAGS) $(BOOST_LDFLAGS)
+
 include $(top_srcdir)/am/global-rules
