--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -9,8 +9,9 @@ libduneporsol_la_SOURCES =
 # Dummy C++ source to cause C++ linking.
 nodist_EXTRA_libduneporsol_la_SOURCES = dummy.cpp
 
-# Collect constituent parts into cpg support library.
+# Collect constituent parts into module library.
 libduneporsol_la_LIBADD = \
-   ../dune/porsol/opmpressure/libopmpressure_noinst.la
+   ../dune/porsol/opmpressure/libopmpressure_noinst.la \
+   ../dune/porsol/common/libduneporsolcommon.la
 
 include $(top_srcdir)/am/global-rules
