--- a/dune/porsol/mimetic/test/Makefile.am
+++ b/dune/porsol/mimetic/test/Makefile.am
@@ -2,15 +2,7 @@
 # $Revision$
 
 check_PROGRAMS =
-noinst_PROGRAMS = ifsh_solver_test \
-                  mimetic_ipeval_test \
-                  mimetic_solver_test \
-                  mimetic_aniso_solver_test \
-                  mimetic_periodic_test \
-		  istl_test \
-		  spe10_test \
-		  tpfa_solver_test \
-		  known_answer_test
+noinst_PROGRAMS = mimetic_ipeval_test
 
 AM_CPPFLAGS += $(DUNEMPICPPFLAGS) $(BOOST_CPPFLAGS) $(ALUGRID_CPPFLAGS) $(SUPERLU_CPPFLAGS)
 AM_LDFLAGS  += $(DUNEMPILDFLAGS) $(BOOST_LDFLAGS) $(ALUGRID_LDFLAGS) $(SUPERLU_LDFLAGS)
@@ -19,28 +11,8 @@ LDADD = $(DUNE_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIB)   \
 	 $(ALUGRID_LIBS) $(SUPERLU_LIBS)                \
         $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
 
-# Note: Need to fill _SOURCES because default is "<base>.c"
-ifsh_solver_test_SOURCES = ifsh_solver_test.cpp
-ifsh_solver_test_LDADD = $(LDADD) ../../opmpressure/libopmpressure.la
-
 mimetic_ipeval_test_SOURCES = mimetic_ipeval_test.cpp
 
-mimetic_solver_test_SOURCES = mimetic_solver_test.cpp
-
-mimetic_aniso_solver_test_SOURCES = mimetic_aniso_solver_test.cpp
-
-mimetic_periodic_test_SOURCES = mimetic_periodic_test.cpp
-
-#parsolver_test_SOURCES = parsolver_test.cpp
-
-istl_test_SOURCES = istl_test.cpp
-
-spe10_test_SOURCES = spe10_test.cpp
-
-tpfa_solver_test_SOURCES = tpfa_solver_test.cpp
-tpfa_solver_test_LDADD = $(LDADD) ../../opmpressure/libopmpressure.la
-
-known_answer_test_SOURCES = known_answer_test.cpp
 
 TESTS = $(check_PROGRAMS)
 
