--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,43 +1,48 @@
 SUBDIRS =
 
-noinst_PROGRAMS = grdecl_to_legacy_test make_vtk_test
+check_PROGRAMS =
+noinst_PROGRAMS = grdecl_to_legacy_test \
+                  make_vtk_test \
+                  istl_test \
+                  ifsh_solver_test \
+                  mimetic_solver_test \
+                  mimetic_aniso_solver_test \
+                  mimetic_periodic_test \
+		  spe10_test \
+		  tpfa_solver_test \
+		  known_answer_test
 
 grdecl_to_legacy_test_SOURCES = grdecl_to_legacy_test.cpp
+
 make_vtk_test_SOURCES  = make_vtk_test.cpp
 
+ifsh_solver_test_SOURCES = ifsh_solver_test.cpp
+ifsh_solver_test_LDADD = $(LDADD) ../lib/libduneporsol.la
 
-AM_CPPFLAGS += $(DUNEMPICPPFLAGS) $(BOOST_CPPFLAGS)
+mimetic_solver_test_SOURCES = mimetic_solver_test.cpp
 
-LDADD = $(DUNEMPILIBS) $(BOOST_SYSTEM_LIB) \
-	$(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
+mimetic_aniso_solver_test_SOURCES = mimetic_aniso_solver_test.cpp
 
-#dune_porsol_CPPFLAGS = $(AM_CPPFLAGS) \
-#	$(DUNEMPICPPFLAGS) \
-#	$(UG_CPPFLAGS) \
-#	$(AMIRAMESH_CPPFLAGS) \
-#	$(ALBERTA_CPPFLAGS) \
-#	$(ALUGRID_CPPFLAGS)
-#
-## The libraries have to be given in reverse order (most basic libraries
-## last).  Also, due to some misunderstanding, a lot of libraries include the
-## -L option in LDFLAGS instead of LIBS -- so we have to include the LDFLAGS
-## here as well.
-#dune_porsol_LDADD = \
-#	$(DUNE_LDFLAGS) $(DUNE_LIBS) \
-#	$(ALUGRID_LDFLAGS) $(ALUGRID_LIBS) \
-#	$(ALBERTA_LDFLAGS) $(ALBERTA_LIBS) \
-#	$(AMIRAMESH_LDFLAGS) $(AMIRAMESH_LIBS) \
-#	$(UG_LDFLAGS) $(UG_LIBS) \
-#	$(DUNEMPILIBS)	\
-#	$(LDADD)
-#
-#dune_porsol_LDFLAGS = $(AM_LDFLAGS) \
-#	$(DUNEMPILDFLAGS) \
-#	$(UG_LDFLAGS) \
-#	$(AMIRAMESH_LDFLAGS) \
-#	$(ALBERTA_LDFLAGS) \
-#	$(ALUGRID_LDFLAGS) \
-#	$(DUNE_LDFLAGS)
+mimetic_periodic_test_SOURCES = mimetic_periodic_test.cpp
+
+istl_test_SOURCES = istl_test.cpp
+
+spe10_test_SOURCES = spe10_test.cpp
+
+tpfa_solver_test_SOURCES = tpfa_solver_test.cpp
+tpfa_solver_test_LDADD = $(LDADD) ../lib/libduneporsol.la
+
+known_answer_test_SOURCES = known_answer_test.cpp
+
+TESTS = $(check_PROGRAMS)
+
+
+AM_CPPFLAGS += $(DUNEMPICPPFLAGS) $(BOOST_CPPFLAGS) $(ALUGRID_CPPFLAGS) $(SUPERLU_CPPFLAGS)
+AM_LDFLAGS  += $(DUNEMPILDFLAGS) $(BOOST_LDFLAGS) $(ALUGRID_LDFLAGS) $(SUPERLU_LDFLAGS)
+LDADD = $(DUNE_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIB)   \
+        $(BOOST_SYSTEM_LIB) $(DUNEMPILIBS)              \
+	 $(ALUGRID_LIBS) $(SUPERLU_LIBS)                \
+        $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
 
 # don't follow the full GNU-standard
 # we need automake 1.5
