--- a/dune/porsol/common/test/Makefile.am
+++ b/dune/porsol/common/test/Makefile.am
@@ -3,13 +3,9 @@
 
 check_PROGRAMS = boundaryconditions_test nonuniformtablelinear_test
 noinst_PROGRAMS = \
-        aniso_implicitcap_test \
-        aniso_simulator_test \
         gie_test \
-        implicitcap_test \
         periodic_test \
-        rockjfunc_test \
-        simulator_test
+        rockjfunc_test
 
 # Common flags
 AM_CPPFLAGS += $(DUNEMPICPPFLAGS) $(BOOST_CPPFLAGS) $(SUPERLU_CPPFLAGS)
@@ -29,18 +25,6 @@ gie_test_SOURCES = gie_test.cpp
 
 rockjfunc_test_SOURCES = rockjfunc_test.cpp
 rockjfunc_test_LDADD   = $(LDADD) $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SUPERLU_LIBS)
-
-simulator_test_SOURCES = simulator_test.cpp
-simulator_test_LDADD   = $(LDADD) $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SUPERLU_LIBS) # -ltbb
-
-aniso_simulator_test_SOURCES = aniso_simulator_test.cpp
-aniso_simulator_test_LDADD   = $(LDADD) $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SUPERLU_LIBS)
-
-implicitcap_test_SOURCES = implicitcap_test.cpp
-implicitcap_test_LDADD   = $(LDADD) $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SUPERLU_LIBS)
-
-aniso_implicitcap_test_SOURCES = aniso_implicitcap_test.cpp
-aniso_implicitcap_test_LDADD   = $(LDADD) $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SUPERLU_LIBS)
 
 TESTS = $(check_PROGRAMS)
 
