--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,8 @@ AC_CONFIG_FILES([
   dune/porsol/opmpressure/Makefile
   dune/porsol/mimetic/Makefile
   dune/porsol/mimetic/test/Makefile
+  dune/porsol/blackoil/Makefile
+  dune/porsol/blackoil/test/Makefile
   lib/Makefile
   examples/Makefile
   dune-porsol.pc
