--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,7 @@ AC_CONFIG_FILES([
   dune/porsol/euler/Makefile
   dune/porsol/euler/test/Makefile
   dune/porsol/opmpressure/Makefile
+  dune/porsol/opmpressure/src/Makefile
   dune/porsol/mimetic/Makefile
   dune/porsol/mimetic/test/Makefile
   dune/porsol/blackoil/Makefile
