Removed unused files.

--- a/dune/porsol/blackoil/test/Makefile.am
+++ b/dune/porsol/blackoil/test/Makefile.am
@@ -2,9 +2,7 @@
 # $Revision$
 
 check_PROGRAMS =
-noinst_PROGRAMS = bo_transport_test bo_fluid_test
-
-bo_transport_test_SOURCES = bo_transport_test.cpp
+noinst_PROGRAMS = bo_fluid_test
 
 bo_fluid_test_SOURCES = bo_fluid_test.cpp
 
