--- a/.hgignore
+++ b/.hgignore
@@ -21,14 +21,8 @@ Doxyfile.in
 aclocal.m4
 am
 autom4te.cache
-config.h.in
-config.h
 configure
-config.log
-config.guess
-config.sub
-config.status
-config.lt
+config.*
 dependencies.m4
 depcomp
 install-sh
