Two-phase 2D flow (IRIS) now compiles with DUNE 2 ...

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -55,6 +55,8 @@ aniso_implicitcap_test_SOURCES = aniso_implicitcap_test.cpp
 blackoil_sim_test_SOURCES = blackoil_sim_test.cpp
 blackoil_sim_test_LDADD = $(LDADD) ../lib/libduneporsol.la
 
+twophase2_test_SOURCES = twophase2_test.cpp
+twophase2_test_LDADD = $(LDADD) ../lib/libduneporsol.la
 
 
 
