--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -13,6 +13,8 @@ nodist_EXTRA_libduneporsol_la_SOURCES = dummy.cpp
 libduneporsol_la_LIBADD = \
    ../dune/porsol/opmpressure/src/libopmpressure_noinst.la \
    ../dune/porsol/common/libduneporsolcommon.la \
-   ../dune/porsol/blackoil/fluid/libblackoilfluid_noinst.la
+   ../dune/porsol/blackoil/fluid/libblackoilfluid_noinst.la \
+   ../dune/porsol/twophase2/OPMKvasiSophusCode/libOPMKvasiSophusCode_noinst.la \
+   ../dune/porsol/twophase2/OPMIRISCode/libOPMIRISCode_noinst.la
 
 include $(top_srcdir)/am/global-rules
