--- a/dune/porsol/Makefile.am
+++ b/dune/porsol/Makefile.am
@@ -1,5 +1,5 @@
 porsolincludedir = $(includedir)/dune/porsol
 
-SUBDIRS = opmpressure common euler mimetic blackoil
+SUBDIRS = opmpressure common euler mimetic blackoil twophase2
 
 include $(top_srcdir)/am/global-rules
