Added opmtransport to dune-porsol.

--- a/configure.ac
+++ b/configure.ac
@@ -41,6 +41,8 @@ AC_CONFIG_FILES([
   dune/porsol/euler/test/Makefile
   dune/porsol/opmpressure/Makefile
   dune/porsol/opmpressure/src/Makefile
+  dune/porsol/opmtransport/Makefile
+  dune/porsol/opmtransport/src/Makefile
   dune/porsol/mimetic/Makefile
   dune/porsol/mimetic/test/Makefile
   dune/porsol/blackoil/Makefile
