Add work-arounds for CMake-based builds.
Also, take initial steps for using implicit transport.

--- a/dune/porsol/Makefile.am
+++ b/dune/porsol/Makefile.am
@@ -1,5 +1,6 @@
 porsolincludedir = $(includedir)/dune/porsol
 
-SUBDIRS = opmpressure opmtransport common euler mimetic blackoil twophase2
+SUBDIRS = opmpressure common euler mimetic blackoil twophase2
+# opmtransport 
 
 include $(top_srcdir)/am/global-rules
