--- a/configure.ac
+++ b/configure.ac
@@ -41,8 +41,6 @@ AC_CONFIG_FILES([
   dune/porsol/euler/test/Makefile
   dune/porsol/opmpressure/Makefile
   dune/porsol/opmpressure/src/Makefile
-  dune/porsol/opmtransport/Makefile
-  dune/porsol/opmtransport/src/Makefile
   dune/porsol/mimetic/Makefile
   dune/porsol/mimetic/test/Makefile
   dune/porsol/blackoil/Makefile
@@ -55,6 +53,11 @@ AC_CONFIG_FILES([
   examples/Makefile
   dune-porsol.pc
 ])
+
+#  dune/porsol/opmtransport/Makefile
+#  dune/porsol/opmtransport/src/Makefile
+#  dune/porsol/opmtransport/examples/Makefile
+
 AC_OUTPUT
 # finally print the summary information
 DUNE_SUMMARY_ALL
