--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -19,7 +19,8 @@ spe10_test					\
 spu_2p						\
 tpfa_compressible_solver_test			\
 tpfa_solver_test				\
-twophase2_test
+twophase2_test \
+spu_2p
 
 
 grdecl_to_legacy_test_SOURCES = grdecl_to_legacy_test.cpp
