checking after getting things to run, I do not trust the results

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -38,8 +38,8 @@ mimetic_periodic_test_SOURCES = mimetic_periodic_test.cpp
 
 istl_test_SOURCES = istl_test.cpp
 
-#spu_2p_SOURCES = spu_2p.cpp
-#spu_2p_LDADD = $(LDADD) ../lib/libduneporsol.la
+spu_2p_SOURCES = spu_2p.cpp
+spu_2p_LDADD = $(LDADD) ../lib/libduneporsol.la
 
 spe10_test_SOURCES = spe10_test.cpp
 
