--- a/dune-porsol.pc.in
+++ b/dune-porsol.pc.in
@@ -8,8 +8,8 @@ DEPENDENCIES=@REQUIRES@
 
 Name: @PACKAGE_NAME@
 Version: @VERSION@
-Description: dune-porsol module
-URL: http://dune-project.org/
-Requires: dune-common dune-grid dune-istl dune-cornerpoint
-Libs: -L
-Cflags: -I
+Description: A Dune module containing porous media pde solvers.
+URL: http://public.ict.sintef.no/openrs
+Requires: ${DEPENDENCIES}
+Libs: -L${libdir} -lduneporsol
+Cflags: -I${includedir}
