Use common files from Opm instead of Dune

--- a/dune/porsol/common/Makefile.am
+++ b/dune/porsol/common/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS = test
 
 commondir = $(includedir)/dune/porsol/common
 common_HEADERS = blas_lapack.hpp BoundaryConditions.hpp fortran.hpp \
-                 GridInterfaceEuler.hpp linearInterpolation.hpp Matrix.hpp \
+                 GridInterfaceEuler.hpp Matrix.hpp \
                  MatrixInverse.hpp NonuniformTableLinear.hpp PeriodicHelpers.hpp \
                  ReservoirPropertyCapillary.hpp setupBoundaryConditions.hpp \
                  setupGridAndProps.hpp SimulatorBase.hpp \
