--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -5,6 +5,7 @@ noinst_PROGRAMS =				\
 aniso_implicitcap_test				\
 aniso_simulator_test				\
 blackoil_sim_test				\
+co2_sim_test					\
 grdecl_to_legacy_test				\
 ifsh_solver_test				\
 implicitcap_test				\
@@ -65,6 +66,9 @@ aniso_implicitcap_test_SOURCES = aniso_implicitcap_test.cpp
 
 blackoil_sim_test_SOURCES = blackoil_sim_test.cpp
 blackoil_sim_test_LDADD = $(LDADD) ../lib/libduneporsol.la
+
+co2_sim_test_SOURCES = co2_sim_test.cpp
+co2_sim_test_LDADD = $(LDADD) ../lib/libduneporsol.la
 
 twophase2_test_SOURCES = twophase2_test.cpp
 twophase2_test_LDADD = $(LDADD) ../lib/libduneporsol.la
