Change branding from DUNE to OPM
Only the configuration files where the library name is mentioned are changed.
Renaming the directory dune/ to opm/ would require massive change through-out
the code.

--- a/opm-porsol.pc.in
+++ b/opm-porsol.pc.in
@@ -9,7 +9,7 @@ DEPENDENCIES=@REQUIRES@
 Name: @PACKAGE_NAME@
 Version: @VERSION@
 Description: A Dune module containing porous media pde solvers.
-URL: http://public.ict.sintef.no/openrs
+URL: http://www.opm-project.org
 Requires: ${DEPENDENCIES}
-Libs: -L${libdir} -lduneporsol
+Libs: -L${libdir} -lopmporsol
 Cflags: -I${includedir}
