Update library names to reflect change in branding
This really should have been done as part of commit 4c2c07.

--- a/dune/porsol/common/Makefile.am
+++ b/dune/porsol/common/Makefile.am
@@ -11,13 +11,13 @@ common_HEADERS = blas_lapack.hpp BoundaryConditions.hpp fortran.hpp \
                  setupGridAndProps.hpp SimulatorBase.hpp \
 		 SimulatorUtilities.hpp SintefLegacyGridInterface.hpp
 
-noinst_LTLIBRARIES = libduneporsolcommon.la
+noinst_LTLIBRARIES = libopmporsolcommon.la
 
-libduneporsolcommon_la_SOURCES = \
+libopmporsolcommon_la_SOURCES = \
 	LinearSolverISTL.cpp
 
 
-libduneporsolcommon_la_CPPFLAGS = $(DUNE_CPPFLAGS) $(BOOST_CPPFLAGS)
-libduneporsolcommon_la_LDFLAGS  = $(DUNE_LDFLAGS) $(BOOST_LDFLAGS)
+libopmporsolcommon_la_CPPFLAGS = $(DUNE_CPPFLAGS) $(BOOST_CPPFLAGS)
+libopmporsolcommon_la_LDFLAGS  = $(DUNE_LDFLAGS) $(BOOST_LDFLAGS)
 
 include $(top_srcdir)/am/global-rules
