--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -12,8 +12,9 @@ nodist_EXTRA_libopmporsol_la_SOURCES = dummy.cpp
 # Collect constituent parts into module library.
 libopmporsol_la_LIBADD =                                                   \
 ../dune/porsol/common/libopmporsolcommon.la                                \
-../dune/porsol/blackoil/fluid/libblackoilfluid_noinst.la                    \
-../dune/porsol/twophase2/OPMKvasiSophusCode/libOPMKvasiSophusCode_noinst.la \
-../dune/porsol/twophase2/OPMIRISCode/libOPMIRISCode_noinst.la
+../dune/porsol/blackoil/fluid/libblackoilfluid_noinst.la
+#                    \
+#../dune/porsol/twophase2/OPMKvasiSophusCode/libOPMKvasiSophusCode_noinst.la \
+#../dune/porsol/twophase2/OPMIRISCode/libOPMIRISCode_noinst.la
 
 include $(top_srcdir)/am/global-rules
