--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -90,15 +90,15 @@ TESTS = $(check_PROGRAMS)
 # in the ALUgrid interface.
 # If we find out how to properly install two versions of
 # ALUgrid (both debug and release), we may reinstate them.
-# AM_CPPFLAGS += $(DUNEMPICPPFLAGS) $(BOOST_CPPFLAGS) $(ALUGRID_CPPFLAGS) $(SUPERLU_CPPFLAGS)
-# AM_LDFLAGS  += $(DUNEMPILDFLAGS) $(BOOST_LDFLAGS) $(ALUGRID_LDFLAGS) $(SUPERLU_LDFLAGS)
+# AM_CPPFLAGS += $(DUNEMPICPPFLAGS) $(OPM_BOOST_CPPFLAGS) $(ALUGRID_CPPFLAGS) $(SUPERLU_CPPFLAGS)
+# AM_LDFLAGS  += $(DUNEMPILDFLAGS) $(OPM_BOOST_LDFLAGS) $(ALUGRID_LDFLAGS) $(SUPERLU_LDFLAGS)
 # LDADD = $(DUNE_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIB) \
           $(BOOST_SYSTEM_LIB) $(DUNEMPILIBS)            \
           $(ALUGRID_LIBS) $(SUPERLU_LIBS)               \
           $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
 
-AM_CPPFLAGS += $(DUNEMPICPPFLAGS) $(BOOST_CPPFLAGS) $(SUPERLU_CPPFLAGS)
-AM_LDFLAGS  += $(DUNEMPILDFLAGS) $(BOOST_LDFLAGS) $(SUPERLU_LDFLAGS)
+AM_CPPFLAGS += $(DUNEMPICPPFLAGS) $(OPM_BOOST_CPPFLAGS) $(SUPERLU_CPPFLAGS)
+AM_LDFLAGS  += $(DUNEMPILDFLAGS) $(OPM_BOOST_LDFLAGS) $(SUPERLU_LDFLAGS)
 
 LDADD =                                         \
 $(DUNE_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIB)   \
