make opm-porsol use the new opm-material module
I'm not sure whether it works, but I'm pretty sure that it compiles
and slightly less sure that the code is equivalent to what was there.
(it seems like the dumux material relations used so far were about two
years old, so there slightly more invasive changes were required to
the code.)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set (${project}_DEPS
 	dune-istl REQUIRED;
 	dune-grid REQUIRED;
 	opm-core REQUIRED;
+	opm-material REQUIRED;
 	dune-cornerpoint REQUIRED"
 	)
 
