--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ include (CMakeLists_files.cmake)
 macro (config_hook)
 	opm_need_version_of ("dune-common")
 	opm_need_version_of ("dune-istl")
+	opm_need_version_of ("dune-grid")
 endmacro (config_hook)
 
 macro (prereqs_hook)
