--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Build-Depends: build-essential, debhelper (>= 9), libboost-filesystem-dev,
                libdune-common-dev, libdune-istl-dev, cmake, libtinyxml-dev, bc,
                libert.ecl-dev, git, zlib1g-dev, libtool, libopm-material-dev,
                libdune-cornerpoint-dev, libdune-grid-dev, doxygen,
-               texlive-latex-extra, texlive-latex-recommended, ghostscript
+               texlive-latex-extra, texlive-latex-recommended, ghostscript,
+               libopm-parser-dev, libboost-iostreams-dev, pkg-config
 Standards-Version: 3.9.2
 Section: libs
 Homepage: http://opm-project.org
