fixed: make sure opm-common can be (re-)found
see https://github.com/OPM/opm-common/issues/40#issuecomment-140720316

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ endif()
 if (opm-common_FOUND)
    include(OpmInit)
 else()
+   unset(opm-common_FOUND)
+
    if (NOT OPM_COMMON_ROOT AND SIBLING_SEARCH)
       set(OPM_COMMON_ROOT ${PROJECT_SOURCE_DIR}/../opm-common)
    endif()
